k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: rikili001
spec:
  replicas: 1
  selector:
    matchLabels: { app: backend }
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxSurge: 1, maxUnavailable: 0 }
  template:
    metadata:
      labels: { app: backend }
    spec:
      containers:
        - name: backend
          image: ravindudilhan/rebuild-backend:latest
          imagePullPolicy: Always
          ports: [{ containerPort: 8000 }]
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: rikili001
spec:
  selector: { app: backend }
  ports: [{ port: 8000 }]
