k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rebuild-ingress
  namespace: rikili001
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
  - host: rebuild-app.duckdns.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port: {number: 8000}
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port: {number: 3000}
